<resources>
    <string name="app_name">Shoe Store Inventory App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_next">Click next!!!</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instruction_screen">Instruction Screen</string>
    <string name="instruction_1">1. Do this.</string>
    <string name="instruction_2">2. Do that.</string>
    <string name="add_item">add item</string>
    <string name="shoe_name">Name: </string>
    <string name="company">Company: </string>
    <string name="description">Description: </string>
    <string name="size">Size: </string>
    <string name="exp_desc">This is a hiking shoe.</string>
    <string name="exp_size">10</string>
    <string name="exp_name">Hiking shoe</string>
    <string name="exp_comp">Nike</string>
    <string name="save">Save</string>
    <string name="add_icon">AddIcon</string>
    <string name="cancel">Cancel</string>
</resources>